Tue Sep 04 23:07:54 2001  George Lebl <jirka@5z.com>

	* Makefile.am, basep-widget.[ch], conditional.c, foobar-widget.c,
	  gnome-run.c, main.c, menu.c, panel-util.c, panel-widget.c,
	  panel_config.c, session.c, tasklist_icon.c:  Reenable some things
	  and ifdef out others.  Put gnome-run back.  Compiles with latest
	  libgnome/ui now.

2001-08-31  Kevin Vandersloot <kfv101@psu.edu>

	* panel_widget.c (panel_widget_get_free_space): fix 
	initializing of right, left ints. They were switched. This
	fixes the case where the tasklist wouldn't honor the
	"Only use empty space" option.

2001-09-01  Darin Adler  <darin@bentspoon.com>

	* conditional.c:
	* drawer.c:
	* main.c:
	* menu.c:
	* panel_config.c:
	* session.c:
	* session.h:
	Fix includes to start on the porting to GNOME 2.

2001-08-26  Seth Nickell  <snickell@stanford.edu>

	* foobar-widget.c:

	Include time.h since we use time_t structures.
	
	* gnome-panel-properties.c: (show_page):
	* nothing.cP:

	Call gtk_notebook_set_current_page as gtk_notebook_set_page
	is deprecated.

2001-08-18  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added rules to create panel-typebuiltins.[ch].

	* panel-typebuiltins.[ch]: Create these files from glib-mkenums.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Put gwmh back, less work this way.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* extern.c (panel_corba_gtk_init): Make this actually work.

	* Makefile.am: Renamed panel to panel-2, commented out the
	applet and status libraries, removed everything else.

	* panel.server.in: New file.

	* panel.gnorba, panel.soundlist: Removed.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* main.c: Put in some protection so that panel won't start up
	unless explicitly told to - so it won't ruin your desktop if you
	accidentally start it.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Renamed the `panel-temp' target back to `panel'.

2001-08-11  Martin Baulig  <baulig@suse.de>
