@@ -1,3 +1,7 @@
+Fri Sep 07 14:09:51 2001  George Lebl <jirka@5z.com>
+
+	* *.c: include libgnome/libgnome.h and libgnomeui/libgnomeui.h
+
 Tue Sep 04 23:07:54 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, basep-widget.[ch], conditional.c, foobar-widget.c,
